docs/BLI: add missing descriptions of feature bits
Follow up for 2553a5482c77980429565d14662f309e385bd472,
92bb46c464ffc6f04b633f7d82686a766663ad69,
e15d18b4c64e13c37a4c676bf61a5ecf8bba04a3,
a67f22c4a73a22312a61dd9352504cd2a960b8a8,
e1f1b5fc62f721a3a4c14d97ad01447b2ac07d6d.

--- a/TODO
+++ b/TODO
@@ -2319,8 +2319,10 @@ Features:
   ConditionConfigSearchPathNotEmpty= or different syntax? See the discussion starting at
   https://github.com/systemd/systemd/pull/15109#issuecomment-607740136.
 
-* BootLoaderSpec: Define a way how an installer can figure out whether a BLS
+* BootLoaderSpec: define a way how an installer can figure out whether a BLS
   compliant boot loader is installed.
+
+* BootLoaderSpec: document @saved pseudo-entry, update mention in BLI
 
 * think about requeuing jobs when daemon-reload is issued? use case:
   the initrd issues a reload after fstab from the host is accessible
