--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
 systemd System and Service Manager
 
-CHANGES WITH 259 in spe:
+CHANGES WITH 259:
 
         Announcements of Future Feature Removals and Incompatible Changes:
 
@@ -574,7 +574,7 @@ CHANGES WITH 259 in spe:
         kanitha chim, lumingzh, n0099, ners, nkraetzschmar, nl6720, q66,
         theSillywhat, val4oss, 雪叶
 
-        — Edinburgh, 2025/12/10
+        — Edinburgh, 2025/12/17
 
 CHANGES WITH 258:
 
