idn: drop support for libidn
The current tree doesn't even compile with libidn(1) after
2c7bdaf9f144ad339c72628579183fc849f2b794, which included
a non-existent call to check_dlopen_blocked() somehow.
Hence, it feels safe to just nuke legacy support from
our repo.

--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,10 @@ CHANGES WITH 260 in spe:
         * Meson options '-Dintegration-tests=' and '-Dcryptolib=' (deprecated
           in v258) have been removed.
 
+        * Support for libidn has been removed. IDN functionality now requires
+          libidn2. The corresponding meson option '-Dlibidn=' is deprecated
+          too and will be dropped in a future release.
+
 CHANGES WITH 259:
 
         Announcements of Future Feature Removals and Incompatible Changes:
